fix: remove tax

--- a/invoice/app_automation/templates/emails/quotation.html
+++ b/invoice/app_automation/templates/emails/quotation.html
@@ -130,10 +130,7 @@
           width: 100%;
           max-width: 400px;
         "
-      >
-        <p style="margin: 0">Subtotal</p>
-        <p style="margin: 0">{{subtotal}}</p>
-      </div>
+      ></div>
       <div
         style="
           display: flex;
@@ -144,10 +141,7 @@
           max-width: 400px;
           margin: 0.5rem 0;
         "
-      >
-        <p style="margin: 0">Sales Tax (12%)</p>
-        <p style="margin: 0">{{tax}}</p>
-      </div>
+      ></div>
       <div
         style="
           display: flex;
