chore: add quote footer

--- a/invoice/app_automation/templates/emails/quotation.html
+++ b/invoice/app_automation/templates/emails/quotation.html
@@ -12,7 +12,7 @@
   "
 >
   <img
-    src="https://geoproglobal.com/logo.png"
+    src="https://easemart.ph/web/image/website/1/logo/Easemart?unique=2fba680"
     alt="Logo"
     height="100"
     style="
@@ -22,20 +22,6 @@
       margin-bottom: 10px;
     "
   />
-  <div>
-    <div style="max-width: 300px; max-height: min-content">
-      <p style="font-size: 1.25rem; margin: 0; max-width: max-content">
-        GeoPro Global Solutions Inc.
-      </p>
-      <p style="font-size: 0.75rem; margin: 0; max-width: max-content">
-        Unit No. 204, 2nd Floor KACC Philmade Building, Lot 1 & 2 corner Jose
-        Abad Santos Avenue and E. Quirino st.,
-      </p>
-      <p style="font-size: 0.75rem; margin: 0; max-width: max-content">
-        Clark Freeport Zone, Philippines
-      </p>
-    </div>
-  </div>
 
   <p
     style="
@@ -161,4 +147,97 @@
       </div>
     </div>
   </div>
+  <footer
+    style="
+      padding: 2rem 1rem;
+      text-align: center;
+      background-color: #60a5fa;
+      color: white;
+      font-style: normal;
+    "
+  >
+    <address
+      itemscope="itemscope"
+      itemtype="http://schema.org/Organization"
+      style="display: inline-block; text-align: center"
+    >
+      <div>
+        <div>
+          <span itemprop="name" style="font-weight: bold; font-size: 1.2rem"
+            >Easemart</span
+          >
+        </div>
+
+        <div
+          itemprop="address"
+          itemscope="itemscope"
+          itemtype="http://schema.org/PostalAddress"
+          style="margin-top: 0.5rem"
+        >
+          <div style="display: flex; align-items: baseline; gap: 0.5rem">
+            <i
+              class="fa fa-map-marker fa-fw"
+              role="img"
+              aria-label="Address"
+              title="Address"
+            ></i>
+            <div style="width: 100%" itemprop="streetAddress">
+              Unit No. 204, 2nd Floor KACC Philmade Building,<br />
+              Lot 1 &amp; 2 corner Jose Abad Santos Avenue and E. Quirino St.<br />
+              Clark Freeport Zone PH-PAM 2023, Philippines
+            </div>
+          </div>
+
+          <div style="margin-top: 0.5rem">
+            <i
+              class="fa fa-phone fa-fw"
+              role="img"
+              aria-label="Phone"
+              title="Phone"
+            ></i>
+            <span style="direction: ltr" itemprop="telephone"
+              >(045) 499-8151 | 0917-328-0901</span
+            >
+          </div>
+
+          <div style="margin-top: 0.5rem">
+            <i
+              class="fa fa-envelope fa-fw"
+              role="img"
+              aria-label="Email"
+              title="Email"
+            ></i>
+            <span itemprop="email">web_master@geoproglobal.com</span>
+          </div>
+        </div>
+      </div>
+
+      <div style="margin-top: 1rem">
+        <span
+          class="fa fa-map-marker fa-fw"
+          role="img"
+          aria-label="Address"
+          title="Address"
+        ></span>
+        <a
+          target="_blank"
+          href="https://maps.google.com/maps?q=Unit+No.+204%2C+2nd+Floor+KACC+Philmade+Building%2C+Lot+1+%26+2+corner+Jose+Abad+Santos+Avenue+and+E.+Quirino+st.%2C+Clark+Freeport+Zone+2023%2C+Philippines&amp;z=8"
+          style="margin-left: 0.25rem; text-decoration: none; color: #007bff"
+          >Google Maps</a
+        >
+      </div>
+    </address>
+    <div
+      style="
+        background-color: #444444;
+        width: 100%;
+        color: white;
+        margin: 10px 0;
+        padding: 5px;
+      "
+    >
+      <span>Copyright ©</span>
+      <span itemprop="name">Easemart</span>
+    </div>
+  </footer>
 </div>
