fix: product grid

--- a/invoice/app_automation/templates/emails/quotation.html
+++ b/invoice/app_automation/templates/emails/quotation.html
@@ -11,28 +11,26 @@
     margin: auto;
   "
 >
-  <img
-    src="https://easemart.ph/web/image/website/1/logo/Easemart?unique=2fba680"
-    alt="Logo"
-    height="100"
-    style="
-      position: absolute;
-      min-width: 100px;
-      min-height: 100px;
-      margin-bottom: 10px;
-    "
-  />
-
-  <p
-    style="
-      text-align: left;
-      font-size: 3rem;
-      font-weight: bold;
-      margin: 3.5rem 0;
-    "
-  >
-    QUOTE
-  </p>
+  <div style="width: 100%; position: relative; margin: 15px 0">
+    <img
+      src="https://easemart.ph/web/image/website/1/logo/Easemart?unique=2fba680"
+      alt="Logo"
+      height="100"
+      style="position: absolute; min-width: 100px; min-height: 100px"
+    />
+    <p
+      style="
+        text-align: left;
+        font-size: 3rem;
+        position: absolute;
+        right: 0;
+        font-weight: bold;
+        margin: 3.5rem 0;
+      "
+    >
+      QUOTE
+    </p>
+  </div>
 
   <div style="width: 100%">
     <p
@@ -156,6 +154,12 @@
       font-style: normal;
     "
   >
+    <img
+      src="https://easemart.ph/web/image/website/1/logo/Easemart?unique=2fba680"
+      alt="Logo"
+      height="40"
+      style="position: absolute; min-width: 100px; min-height: 100px"
+    />
     <address
       itemscope="itemscope"
       itemtype="http://schema.org/Organization"
